<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF0D9"
    android:padding="16dp">

    <ImageView
        android:id="@+id/moodifyLoginLogo"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:contentDescription="Moodify logo image"
        android:scaleType="fitCenter"
        android:scaleX="3.5"
        android:scaleY="3.5"
        android:src="@drawable/moodify_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/tvBrandLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moodify"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Welcome back"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBrandLogin" />

    <TextView
        android:id="@+id/tvLoginSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="sign in to access your account."
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/user_profile_button_style"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginUsername"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/user_profile_button_style"
        android:hint="Enter your username"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:text="Login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="New Member? Register now"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>