<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="false"
    android:background="@color/lightGreenBackground">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDialogUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkText"
            android:textSize="14sp"
            android:textStyle="italic"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text=" @username" />

        <TextView
            android:id="@+id/tvDialogMood"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDialogDescription"
            android:text="Description:"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/darkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDialogTimestamp"
            android:text="Date:"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:textColor="@color/darkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDialogSocial"
            android:text="Situation:"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:textColor="@color/darkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDialogLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="@color/darkText"/>

        <ImageView
            android:id="@+id/ivDialogImage"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_image"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnDialogDelete"
                style="@style/Widget.MaterialComponents.Button"
                android:text="Delete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/btnDialogEdit"
                style="@style/Widget.MaterialComponents.Button"
                android:text="Edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
